# useful-math-functions

./: .gitignore  .image-allowlist  .mdl_style.rb  .pre-commit-config.yaml  .sourcery.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  mkdocs.yml  pyproject.toml  versions.json
.devcontainer/: devcontainer.json
.github/: copilot-instructions.md
.github/workflows/: block-images.yml  python-package.yml  python-publish.yml  version-check.yml
.mcp-ai-agent-guidelines/: .gitignore
.mcp-ai-agent-guidelines/memory/: system-bootstrap-onboarding.toon
.mcp-ai-agent-guidelines/snapshots/: fingerprint-20260506190908-495077ff.json  fingerprint-20260506190908-61121430.json  fingerprint-20260506190908-63c2d9d6.json  fingerprint-history.json
.serena/: project.yml
.trunk/: trunk.yaml
csv/: AckleyFunction.csv  DeJongN5Function.csv
develop/: 404.html  index.html  objects.inv  sitemap.xml
develop/docs/: index.html
develop/home/changelog/: index.html
develop/home/code_of_conduct/: index.html
develop/home/contributing/: index.html
develop/home/license/: index.html
develop/modules/: index.html
develop/modules/api/chaotic_systems/: index.html
develop/modules/api/data_generation/: index.html
develop/modules/api/distributions/: index.html
develop/modules/api/fractal_set/: index.html
develop/modules/api/hyperbolic/: index.html
develop/modules/export/: index.html
develop/modules/functions/: index.html
develop/search/: search_index.json
docs/: index.md
docs/docs/: index.md
docs/home/: code_of_conduct.md  contributing.md  license.md
docs/modules/api/: chaotic_systems.md  data_generation.md  distributions.md  fractal_set.md  hyperbolic.md  meta_models_and_patterns.md  optimization.md  plots.md  theory.md
docs/modules/export/: 2d_and_3d_plots.md  dataset_generation.md  gifs.md  index.md
docs/modules/functions/: index.md
json/: AckleyFunction.json  DeJongN5Function.json
latest/home/changelog/: index.html
latest/home/code_of_conduct/: index.html
latest/home/contributing/: index.html
latest/home/license/: index.html
latest/modules/: index.html
latest/modules/export/: index.html
latest/modules/functions/: index.html
scripts/: check-no-images-staged.sh
src/umf/: __init__.py
src/umf/core/: __init__.py
umf/: __init__.py
umf/constants/: exceptions.py
umf/core/: __init__.py
umf/functions/chaotic/: oscillators.py  test_oscillators.py
umf/functions/distributions/: continuous_semi_infinite_interval.py  continuous_variable_support.py  continuous_whole_line_support.py  discrete_infinite_support.py  test_continuous_distributions.py
umf/functions/fractal_set/: __init__.py  complex.py  complex_fractals.py  curve.py  dynamic.py  geometric.py
umf/functions/hyperbolic/: __init__.py  angle.py  area.py  distance.py  geodesic.py  isometry.py
umf/functions/optimization/: additional.py  bowl_shaped.py  drops_steps.py  many_local_minima.py  special.py  test_additional_functions.py  test_optimization_functions.py  valley_shaped.py
umf/functions/theory/: pathological.py  test_pathological_functions.py
umf/images/: diagrams.py
umf/meta/: api.py  functions.py  plots.py
umf/test/: __init__.py  conftest.py
umf/types/: static_types.py
v0.1.0/: 404.html  index.html  sitemap.xml
v0.1.0/docs/: index.html
v0.1.0/home/changelog/: index.html
v0.1.0/home/code_of_conduct/: index.html
v0.1.0/home/contributing/: index.html
v0.1.0/home/license/: index.html
v0.1.0/modules/: index.html
v0.1.0/modules/export/: index.html
v0.1.0/modules/functions/: index.html
v0.1.1/: 404.html  index.html  sitemap.xml
v0.1.1/docs/: index.html
v0.1.1/home/changelog/: index.html
v0.1.1/home/code_of_conduct/: index.html
v0.1.1/home/contributing/: index.html
v0.1.1/home/license/: index.html
v0.1.1/modules/: index.html
v0.1.1/modules/export/: index.html
v0.1.1/modules/functions/: index.html
v0.1.2/: 404.html  index.html  sitemap.xml
v0.1.2/docs/: index.html
v0.1.2/home/changelog/: index.html
v0.1.2/home/code_of_conduct/: index.html
v0.1.2/home/contributing/: index.html
v0.1.2/home/license/: index.html
v0.1.2/modules/: index.html
v0.1.2/modules/export/: index.html
v0.1.2/modules/functions/: index.html
v0.1.2/search/: search_index.json
v0.1.3/: 404.html  index.html  sitemap.xml
v0.1.3/docs/: index.html
v0.1.3/home/changelog/: index.html
v0.1.3/home/code_of_conduct/: index.html
v0.1.3/home/contributing/: index.html
v0.1.3/home/license/: index.html
v0.1.3/modules/: index.html
v0.1.3/modules/export/: index.html
v0.1.3/modules/functions/: index.html
v0.2.0/: 404.html  index.html  sitemap.xml
v0.2.0/docs/: index.html
v0.2.0/home/changelog/: index.html
v0.2.0/home/code_of_conduct/: index.html
v0.2.0/home/contributing/: index.html
v0.2.0/home/license/: index.html
v0.2.0/modules/: index.html
v0.2.0/modules/export/: index.html
v0.2.0/modules/functions/: index.html
v0.2.0/search/: search_index.json
v0.3.0/: 404.html  index.html  sitemap.xml
v0.3.0/docs/: index.html
v0.3.0/home/changelog/: index.html
v0.3.0/home/code_of_conduct/: index.html
v0.3.0/home/contributing/: index.html
v0.3.0/home/license/: index.html
v0.3.0/modules/: index.html
v0.3.0/modules/export/: index.html
v0.3.0/modules/functions/: index.html
v0.4.0/: 404.html  index.html  sitemap.xml
v0.4.0/docs/: index.html
v0.4.0/home/changelog/: index.html
v0.4.0/home/code_of_conduct/: index.html
v0.4.0/home/contributing/: index.html
v0.4.0/home/license/: index.html
v0.4.0/modules/: index.html
v0.4.0/modules/export/: index.html
v0.4.0/modules/functions/: index.html
v0.4.0/search/: search_index.json
v0.6.0/: 404.html  index.html  objects.inv  sitemap.xml
v0.6.0/docs/: index.html
v0.6.0/home/changelog/: index.html
v0.6.0/home/code_of_conduct/: index.html
v0.6.0/home/contributing/: index.html
v0.6.0/home/license/: index.html
v0.6.0/modules/: index.html
v0.6.0/modules/export/: index.html
v0.6.0/modules/functions/: index.html
v0.6.0/search/: search_index.json
(+335 files in other folders)
