[project]
name = "useful-math-functions"
version = "0.3.0"
description = "useful-math-functions for Optimization, Benchmarking, Visualizing, and more ..."
authors = [{ name = "Anselm Hahn", email = "anselm.hahn@gmail.com" }]
maintainers = [{ name = "Anselm Hahn", email = "anselm.hahn@gmail.com" }]
requires-python = ">=3.10,<3.12"
readme = "README.md"
dependencies = ["numpy>=2.0.0,<3", "pydantic>=2.0.0,<3", "scipy>=1.11.2,<2"]

[project.urls]
homepage = "https://anselmoo.github.io/useful-math-functions/"
documentation = "https://anselmoo.github.io/useful-math-functions/"
repository = "https://github.com/Anselmoo/useful-math-functions.git"
issues = "https://github.com/Anselmoo/useful-math-functions/issues"
changelog = "https://github.com/Anselmoo/useful-math-functions/blob/main/CHANGELOG.md"

[project.optional-dependencies]
matplotlib = ["matplotlib>=3.7.2,<4", "imagemagic>=0.2.1,<0.3"]
plotly = ["plotly>=5.16.0,<6", "kaleido==0.2.1"]
all = [
    "matplotlib>=3.7.2,<4",
    "plotly>=5.16.0,<6",
    "kaleido==0.2.1",
    "imagemagic>=0.2.1,<0.3",
]


[tool.poetry]
packages = [{ include = "umf", from = "." }]

[tool.poetry.group.dev.dependencies]
ruff = "^0.9.2"
mypy = "^1.14.1"
pytest-sugar = "^1.0.0"
pytest = "^8.3.4"
pre-commit = "^4.0.1"
pytest-cov = "^6.0.0"


[tool.poetry.group.check.dependencies]
scipy = "^1.15.1"


[tool.poetry.group.docs.dependencies]
mkdocs-glightbox = "^0.4.0"
mkdocs-material = "^9.5.50"
mkdocs-minify-plugin = "^0.8.0"
mkdocs-git-revision-date-localized-plugin = "^1.3.0"
mkdocstrings = { extras = ["python"], version = "^0.27.0" }
mathjax = "^0.1.2"
mkdocs-literate-nav = "^0.6.1"
mkdocs-section-index = "^0.3.9"
mike = "^2.1.3"
mkdocs-table-reader-plugin = "^3.1.0"
pymdown-extensions = "^10.14"

[build-system]
requires = ["poetry-core>=2.0"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.report]
exclude_lines = ["no cov", "if __name__ == .__main__.:", "if TYPE_CHECKING:"]
fail_under = 80
show_missing = true

[tool.ruff]
line-length = 88
target-version = "py310"
fix = true

lint.select = ["ALL", "W291"]
lint.ignore = ["ANN101", "ISC001", "COM812", "N803"] # annotations for self
src = ["umf"]

[tool.ruff.lint.per-file-ignores]
"umf/**/test_*.py" = [
    "PLR2004", # magic value comparison
    "S101",    # use of assert detected
    "TCH002",  # third party import (for pytest)
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
known-first-party = ["umf"]
force-single-line = true
lines-between-types = 1
lines-after-imports = 2
known-third-party = ["poetry.core"]
required-imports = ["from __future__ import annotations"]

[tool.mypy]
plugins = "pydantic.mypy"

follow_imports = "silent"
warn_redundant_casts = true
warn_unused_ignores = true
disallow_any_generics = true
check_untyped_defs = true
no_implicit_reexport = true

disallow_untyped_defs = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

[tool.pytest.ini_options]
addopts = [
    "--cov=umf",
    "--cov-report=term-missing",
    "--cov-report=xml",
    "--cov-report=html",
    "--doctest-modules",
    "--doctest-glob=*.md",
]
testpaths = ["umf"]
