[project]
name = "useful-math-functions"
version = "0.5.0"
description = "useful-math-functions for Optimization, Benchmarking, Visualizing, and more ..."
authors = [{ name = "Anselm Hahn", email = "anselm.hahn@gmail.com" }]
requires-python = ">=3.12,<3.15"
license = "MIT"
readme = "README.md"
maintainers = [{ name = "Anselm Hahn", email = "anselm.hahn@gmail.com" }]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Scientific/Engineering :: Mathematics",
  "Topic :: Documentation",
  "Typing :: Typed",
]
dependencies = ["numpy>=2.4.4,<3", "pydantic>=2.13.4,<3", "scipy>=1.17.1,<2"]

[project.optional-dependencies]
matplotlib = ["matplotlib (>=3.10.9,<4.0.0)", "imagemagic (>=0.2.1,<0.3.0)"]
plotly = ["plotly (>=6.7.0,<7.0.0)", "kaleido==1.3.0"]
all = [
  "matplotlib>=3.10.9",
  "plotly>=6.7.0",
  "kaleido>=1.3.0",
  "imagemagic>=0.2.1",
]

[project.urls]
homepage = "https://anselmoo.github.io/useful-math-functions/"
documentation = "https://anselmoo.github.io/useful-math-functions/"
repository = "https://github.com/Anselmoo/useful-math-functions"
issues = "https://github.com/Anselmoo/useful-math-functions/issues"
changelog = "https://github.com/Anselmoo/useful-math-functions/blob/main/CHANGELOG.md"
license = "https://github.com/Anselmoo/useful-math-functions/blob/main/LICENSE.md"
pypi = "https://pypi.org/project/useful-math-functions/"

[dependency-groups]
dev = [
  "ruff>=0.15.12",
  "mypy>=1.20.2",
  "pytest>=9.0.3",
  "pytest-sugar>=1.1.1",
  "pytest-cov>=7.1.0",
  "pre-commit>=4.6.0",
]
check = ["scipy>=1.17.1,<2"]
docs = [
  "mkdocs-glightbox>=0.5.2",
  "mkdocs-material>=9.0.0",
  "mkdocs-minify-plugin>=0.8.0",
  "mkdocs-git-revision-date-localized-plugin>=1.5.1",
  "mkdocstrings[python]>=1.0.4,<2",
  "mathjax>=0.1.2",
  "mkdocs-literate-nav>=0.6.3",
  "mkdocs-section-index>=0.3.12",
  "mike>=2.2.0,<3",
  "mkdocs-table-reader-plugin>=3.1.0",
  "pymdown-extensions>=10.21.2",
]

[tool.uv]
default-groups = ["dev", "check", "docs"]

[tool.hatch.build.targets.sdist]
include = ["./umf"]

[tool.hatch.build.targets.wheel]
include = ["./umf"]

[tool.hatch.build.targets.wheel.sources]
"./umf" = "umf"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.coverage.report]
exclude_lines = ["no cov", "if __name__ == .__main__.:", "if TYPE_CHECKING:"]
fail_under = 80
show_missing = true

[tool.ruff]
line-length = 88
target-version = "py312"
fix = true

lint.select = ["ALL", "W291"]
lint.ignore = ["ISC001", "COM812", "N803"] # annotations for self
src = ["umf"]

[tool.ruff.lint.per-file-ignores]
"umf/**/test_*.py" = [
  "PLR2004", # magic value comparison
  "S101",    # use of assert detected
  "TCH002",  # third party import (for pytest)
]
"umf/types/__init__.py" = [
  "A005",
] # module shadows a Python standard-library module

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
known-first-party = ["umf"]
force-single-line = true
lines-between-types = 1
lines-after-imports = 2
known-third-party = ["hatchling.build"]
required-imports = ["from __future__ import annotations"]

[tool.mypy]
plugins = "pydantic.mypy"

follow_imports = "silent"
warn_redundant_casts = true
warn_unused_ignores = true
disallow_any_generics = true
check_untyped_defs = true
no_implicit_reexport = true

disallow_untyped_defs = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

[tool.pytest.ini_options]
addopts = [
  "--cov=umf",
  "--cov-report=term-missing",
  "--cov-report=xml",
  "--cov-report=html",
  "--doctest-modules",
  "--doctest-glob=*.md",
]
testpaths = ["umf"]
